--- a/DSAlgoProject/Config/Config.properties
+++ b/DSAlgoProject/Config/Config.properties
@@ -1,6 +1,2 @@
 Baseurl = https://dsportalapp.herokuapp.com
-UserName = Srujana123
-Password = Password321
-chromepath =./Drivers\\chromedriver.exe
-firefoxpath =./Drivers\\geckodriver.exe
-edgedriver = ./Drivers\\msedgedriver.exe
+xlfile =  C:\Users\chakr\git\DSAlgo\DSAlgoProject\TestData\DataDSAlgo.xlsx
