--- a/DSAlgoProject/pom.xml
+++ b/DSAlgoProject/pom.xml
@@ -78,6 +78,10 @@
 			<version>1.2.17</version>
 		</dependency>
 
-
+<dependency>
+    <groupId>org.slf4j</groupId>
+    <artifactId>slf4j-log4j12</artifactId>
+    <version>1.7.26</version>
+</dependency>
 	</dependencies>
 </project>
